--- a/changelog.txt
+++ b/changelog.txt
@@ -11,10 +11,16 @@
 
 11.17.15
 - Improved Menu (Dropdowns)
-- Better Crits config
-- Crits Pull option instead of reruning on refresh
-- Archive Menu
-- Place Holder for About
+- Imporved Crits config
+- Crits Pull option instead of rerunning on load
+- Archive now located in Menu
+- Place Holder for About page in Menu
 - Green highlight for archive action
 - Refresh button on Modals
 
+Next...
+- Choose AV option in config
+- Select All for Archiving
+- 3rd catagory "False Positive"
+- Add notes
+- Downloading
